--- a/justnote.org
+++ b/justnote.org
@@ -457,6 +457,7 @@
 - npx expo install react-native-animated-spinkit
 - npx expo install react-native-share
 - npx expo install expo-build-properties
+- npx expo lint
 ** build
 - npx expo prebuild --clean
 - ios
