--- a/justnote.org
+++ b/justnote.org
@@ -459,6 +459,7 @@
 - npx expo install expo-build-properties
 - npx expo lint
 - npx expo install react-native-navigation-mode
+- npx expo install @stylistic/eslint-plugin -- --save-dev
 ** build
 - npx expo prebuild --clean
 - ios
