--- a/justnote.org
+++ b/justnote.org
@@ -434,14 +434,14 @@
 ** install
 - npx create-expo-app --template tabs
 - npx expo install expo-dev-client -- --save-dev
-- npm i 'https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?3d5bcd6ea9a17f00c76be5913009f2c02f13b95f'
+- npm i file:../../../blockstack-react-native/BlockstackSDK
 - npx expo install react-native-mmkv-storage@0.4.4
 - npx expo install react-native-flag-secure
 - npm i react-redux redux redux-thunk reselect
 - npx expo install redux-devtools-expo-dev-plugin
 - npm i url-parse @wewatch/lexorank event-target-fallback queue
 - npm i htmlparser2@9.1.0 jest-diff@29.7.0
-- npx expo install expo-share-intent@^4.1.1
+- npx expo install expo-share-intent
 - npx expo install react-native-file-access
 - npx expo install expo-navigation-bar
 - npx expo install expo-localization
@@ -460,6 +460,8 @@
 - npx expo lint
 - npx expo install react-native-navigation-mode
 - npx expo install @stylistic/eslint-plugin -- --save-dev
+- npx expo install expo-system-ui
+- npx expo install react-native-edge-to-edge
 ** build
 - npx expo prebuild --clean
 - ios
